ops/openshift/workbench/example-workbench-cr.yaml
apiVersion: v1
kind: Service
metadata:
  name: zelda-training-workbench
  namespace: zelda-ai
  labels:
    app: zelda-workbench
  annotations:
    notebook-name: zelda-training-workbench
spec:
  ports:
    - name: notebook-port
      port: 80
      protocol: TCP
      targetPort: notebook-port
  selector:
    notebook-name: zelda-training-workbench

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: zelda-training-workbench
  namespace: zelda-ai
  labels:
    app: zelda-workbench
  annotations:
    notebook-name: zelda-training-workbench
    haproxy.router.openshift.io/timeout: "600s"
spec:
  port:
    targetPort: notebook-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: zelda-training-workbench
    weight: 100
